--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,1 @@
-/* Import Bootstrap 5 */
-@import "bootstrap/dist/css/bootstrap.min.css";
-
-/* Import your custom styles */
-@import "custom.css";
-
-/* All @tailwind directives have been removed. */
+/* Bootstrap is loaded via CDN in the layout file */
